--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/game-logo.png" />
+    <link rel="stylesheet" href="index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React Tic-Tac-Toe</title>
+    <img class= "logo-image" src="public/game-logo.png" alt="Game-logo">
+    <title class="title1">React Tic-Tac-Toe</title>
+    <h1>React Tic-Tac-Toe</h1>
   </head>
   <body>
     <div id="root"></div>
